# bridge-proxy

./: .gitignore  Cargo.toml  Dockerfile  README.md
config/: testing.yaml
src/: config.rs  main.rs  metrics.rs  proxy.rs  tunnel.rs
tests/golang/: Dockerfile  go.mod  main.go
tests/golang/chain_client/: client.go
