[package]
name = "network-bridge-proxy"
version = "0.1.0"
edition = "2021"
description = "A network bridge proxy for blockchain services"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
log = "0.4.21"
clap = { version = "3.2.25", features = ["derive"] }
http = "1.1.0"
log4rs = "1.2"
serde_yaml = "0.9"

hyper = { version = "1.6.0", features = ["http1"] }
hyper-util = { version = "0.1.3", features = ["full"] }
http-body-util = "0.1.0"
anyhow = "1.0.71"

[[bin]]
name = "network-bridge-proxy"
path = "src/main.rs"
