[package]
name = "network-bridge-proxy"
version = "0.1.0"
edition = "2021"
description = "A network bridge proxy for blockchain services"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1.47.0", features = ["full"] }
log = "0.4.27"
clap = { version = "3.2.25", features = ["derive"] }
log4rs = "1.3.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_yaml = "0.9"

hyper = { version = "1.6.0", features = ["http1"] }
hyper-util = { version = "0.1.16", features = ["full"] }
http-body-util = "0.1.3"
anyhow = "1.0.98"

# Metrics dependencies
prometheus = "0.13"
lazy_static = "1.4"

[dev-dependencies]
env_logger = "0.11.8"

[[bin]]
name = "network-bridge-proxy"
path = "src/main.rs"
